--- a/_sass/layouts/_reporting_status.scss
+++ b/_sass/layouts/_reporting_status.scss
@@ -84,6 +84,7 @@
     margin-left: 3px;
   }
   .goal-stats {
+    @include preserveOriginalColors;
     border: 1px solid $color-dark;
     font-size: 0;
     margin-top:10px;
@@ -102,7 +103,7 @@
     padding-bottom: 4px;
     border-bottom: 1px solid $horizontalRule-color;
     .total {
-       line-height: 24px;
+       line-height: 1.2;
        vertical-align: middle;
        font-size: 16px;
        width: auto;
@@ -111,7 +112,6 @@
        text-align: center;
        display: inline-block;
        margin-left: 10px;
-       margin-top: -2px;
        border-radius: 4px;
        border: 1px solid $horizontalRule-color;
     }
@@ -135,7 +135,7 @@
       @media only screen and (max-width: 520px) {
         margin-bottom: 3px;
       }
-      line-height: 24px;
+      line-height: 1.2;
     }
   }
   [data-extra-field] {
